fix responsive bugs on mobile

--- a/main-v3/public/css/style.css
+++ b/main-v3/public/css/style.css
@@ -95,6 +95,7 @@ main {
 
 .wk-footer {
   display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
